# rust-poc-ai-model-comparison

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/config/: graceful_shutdown.rs
src/constant/: constants.rs
src/controller/: foo_controller.rs  health_controller.rs  mod.rs
src/dto/: foo_get_request.rs  foo_post_request.rs  health.rs  mod.rs
src/enums/: common_error.rs
src/service/: foo_service.rs  mod.rs
tests/integration/: foo_get_integration_test.rs  foo_post_integration_test.rs  mod.rs
